# nodestract

./: Cargo.toml  Info.md  NextStep.md  README.md  build.rs  registro_stage.txt  spec.md
docs/: AnalisiCritica.md  DocumentazioneTecnica.md  ManualeUso.md  SpecificheLinguaggio.md
examples/: data_test.ns  en_basic_test.ns  en_test.ns  fail_name_test.ns  it.ns  it_test.ns  language_error_test.ns  math_test.ns  miss_math_import_test.ns  mixed_test.ns  net_test.ns  post_import_error_test.ns  security_test.ns  syntax_error_test.ns
examples/lessons/: lessons.rs
examples/lessons/comment/: 1.ns  10.ns  2.ns  3.ns  4.ns  5.ns  6.ns  7.ns  8.ns  9.ns
examples/lessons/print/: 1.ns  10.ns  2.ns  3.ns  4.ns  5.ns  6.ns  7.ns  8.ns  9.ns
examples/test/conditional/: 0_ALL.ns
examples/test/data/: 0_ALL.ns  2_range.ns  5_coercion_mul.ns  6_fs_ops.ns
examples/test/file/: 0_ALL.ns
examples/test/function/: 0_ALL.ns  10_main.ns  3_wrong_types.ns  4_return_mismatch.ns  5_arg_mismatch.ns
examples/test/languages/: 0_ALL.ns  10_import_comments.ns
examples/test/logical/: 0_ALL.ns
examples/test/math/: 0_ALL.ns
examples/test/net/: 0_ALL.ns
src/: ast.rs  engine.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  value.rs  welcome.rs
src/ast/: ast.rs
src/filter/: filter.rs
src/import/: check.rs  import.json  import.rs
src/interpreter/: expressions.rs  fs.rs  functions.rs  interpreter.rs  net.rs  ops.rs  statements.rs
src/lexer/: lexer.rs
src/parser/: expression.rs  parser.rs  statement.rs
src/translate/: translate.rs
tests/: integration_tests.rs
(+11 files in other folders)
