[package]
name = "ns"
version = "0.12.0"
edition = "2021"
authors = ["HawkStract"]
description = "The official compiler for the NodeStract (.ns) language"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2.5"

[[example]]
name = "lessons"
path = "examples/lessons/lessons.rs"

[[example]]
name = "test_suite"
path = "examples/test/test.rs"